# solar_backdating

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  README.md  SHARED_FROM_ZASOLAR.md  pyproject.toml
configs/: geid_anchor_presence.yaml
data/examples/: anchors.example.csv  presence_timeseries.example.csv
docs/: gehi_temporal_replacement_plan.md  geid_temporal_anchor_presence_architecture.md  sequence_scoring_handoff_2026-05-27.md
schemas/: temporal_inventory.duckdb.sql
scripts/: activate_env.sh  link_data_dirs.sh
scripts/temporal/: __init__.py  build_gt_anchor_manifest.py  build_inventory_chip_groups.py  build_phase0_qa_html.py  download_geid_historical_direct.py  export_geid_temporal_tasks.py  gehi_availability.py  gehi_common.py  gehi_download.py  gehi_info.py  geid_temporal_common.py  infer_install_dates.py  run_adaptive_scan.py  scan_config.py  scan_decision.py  scan_state.py  score_anchor_presence.py  score_chip_group_matrix.py  score_target_sequence.py
scripts/validation/: gemini_solar_image_review.py  parse_geid_probe_results.py  probe_geid_vintages.py  run_geid_vintage_probe.sh
src/solar_backdating/: __init__.py
tests/temporal/: test_build_inventory_chip_groups.py  test_download_geid_historical_direct.py  test_execute_round_real_remap.py  test_gehi_availability.py  test_gehi_common.py  test_gehi_info.py  test_gehi_zoom_ladder.py  test_geid_temporal_common.py  test_gemini_batch.py  test_infer_install_dates_phase0.py  test_parse_geid_probe_results.py  test_phase0_pipeline_smoke.py  test_phase0_qa_html.py  test_repair_isolated_dips.py  (+5 more)
